[package]
name = "bullet_heaven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.11" }
rand = "0.8.5"
bevy_xpbd_2d = "0.2"
bevy-inspector-egui = "0.19"
leafwing-input-manager = "0.10.0"
bevy_egui = "0.21"
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui.git", rev = "e4c183e9ea17bbc71368111547153597eddb5648" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
